Adição de bibliográfia e inicio da elaboração da Intro

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,28 @@
+@article{madhavji2015,
+	Author = {Nazim H. Madhavji and Andriy Miranskyy and Kostas Kontogiannis},
+	Title = {Big Picture of Big Data Software Engineering},
+	Year = {2015},
+	Pages = {11-14},
+	Publisher = {At: Proceeding of the First International Workshop on BIG Data Software Engineering},
+	Organization = {IEEE Press},
+}
+
+@article{gantz2011,
+	Author = {John Gantz and David Reinsel},
+	Title = {Extracting Value from Chaos},
+	Year = {2011},
+	URL = {http://www.emc.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
+}
+
+@book{white2015,
+	Author = {Tom White},
+	Title = {Hadoop: The Definitive Guide},
+	Edition = {Fourth Edition},
+	Editor = {O'Reilly},
+	Year = {2015},
+	ISBN = {978-1-449-38973-4}
+}
+
 @manual{inmetro2003,
 	Author = {INMETRO},
 	Title = {Vocabulário internacional de termos fundamentais e gerais de
@@ -15,7 +40,7 @@
 	Pages = {332-340},
 	Volume = {19},
 	Number = {3},
-	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},	
+	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},
 }
 
 @inproceedings{sparrow1980,
@@ -58,8 +83,8 @@
 	Year = {1989},
 	Pages = {41-44},
 	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
-	Engineering}, 
-	Volume = {1},	
+	Engineering},
+	Volume = {1},
 }
 
 @manual{NBR14724:2011,
