--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -1,8 +1,10 @@
-\chapter*[Introdução]{Introdução}
-\addcontentsline{toc}{chapter}{Introdução}
+\chapter[Introdução]{Introdução}
 
-Este documento apresenta considerações gerais e preliminares relacionadas 
-à redação de relatórios de Projeto de Graduação da Faculdade UnB Gama 
-(FGA). São abordados os diferentes aspectos sobre a estrutura do trabalho, 
-uso de programas de auxilio a edição, tiragem de cópias, encadernação, etc.
-
+Vivemos na era da tecnologia, a principal engrenagem que move nossa atualidade é a informação.
+A informação é vital pois é dela que a sociedade deriva o conhecimento utilizado para crescer. Nos
+últimos anos a quantidade de dados têm crescido exponencialmente com o advento de novas tecnologias
+e a evolução das mídias sociais. Segundo a \textit{International Data Corporation}\footnote{Empresa privada que
+presta consultoria na área de negócios e TI.} (IDC) em 2010, a quantidade de informação passou de 1
+\textit{zettabyte}\footnote{1 Zettabyte equivale à 1.8 trilhão de Gigabytes.}, e em 2011 alcançou a
+marca de 1.8 \textit{zettabyte}, informações que foram capturadas, armazenadas, criadas ao longo dos anos e no
+fim foram mensuradas para calcular o tamanho do espaço digital \cite{gantz2011}.
