--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -1,21 +1,21 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Paulo Eduardo Souza Borba}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
-\data{2013}
-\palavraChaveUm{Palavra-chave01}
-\palavraChaveDois{Palavra-chave02}
+\titulo{Análise de Desempenho em Arquiteturas Distríbuidas para Mobilidade Urbana}
+\data{2016}
+\palavraChaveUm{Big Data}
+\palavraChaveDois{Mobilidade Urbana}
 
 % Dados da orientacao
-\orientador{(Titulação Acadêmica e Nome do Orientador)}
-\coorientador{(quando houver, Titulação Acadêmica e Nome do Orientador)}
+\orientador{Profa. Dra. Edna Dias Canedo}
+\coorientador{Prof. Dr. Rodrigo Bonifácio de Almeida}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013}
+\dataDaAprovacao{01 de junho de 2016}
 \membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
 \membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
