--- a/fixos/informacoes.tex
+++ b/fixos/informacoes.tex
@@ -5,6 +5,6 @@
   Faculdade UnB Gama - FGA
 }
 \tipotrabalho{Trabalho de Conclusão de Curso}
-\preambulo{Monografia submetida ao curso de graduação em (\imprimircurso) 
-da Universidade de Brasília, como requisito parcial para obtenção do Título 
-de Bacharel em (\imprimircurso).}
+\preambulo{Monografia submetida ao curso de graduação em \imprimircurso
+da Universidade de Brasília, como requisito parcial para obtenção do Título
+de Bacharel em \imprimircurso.}
