--- a/fixos/novosComandos.tex
+++ b/fixos/novosComandos.tex
@@ -39,18 +39,20 @@
 
     {\ABNTEXchapterfont\bfseries\LARGE\imprimirtitulo}
     \vspace*{\fill}
-    
+
 	\begin{flushright}
     	\textbf{{\large{Autor: \imprimirautor}}}
 		\par
     	\textbf{{\large{Orientador: \imprimirorientador}}}
+                          \par
+             \textbf{{\large{Coorientador: \imprimircoorientador}}}
 	\end{flushright}
-		
+
     \vspace*{0.2in}
     \textbf{{\large\imprimirlocal}}
     \par
     \textbf{{\large\imprimirdata}}
-    
+
     \vspace*{2.2in}
   \end{capa}
 }
