--- a/tcc.tex
+++ b/tcc.tex
@@ -8,21 +8,21 @@
 
 \begin{document}
 
-\frenchspacing 
+\frenchspacing
 \imprimircapa
 \imprimirfolhaderosto*
 
 \input{fixos/fichaCatalografica}
-\input{editaveis/errata}
+%\input{editaveis/errata}
 \input{fixos/folhaDeAprovacao}
-\input{editaveis/dedicatoria}
-\input{editaveis/agradecimentos}
-\input{editaveis/epigrafe}
+%\input{editaveis/dedicatoria}
+%\input{editaveis/agradecimentos}
+%\input{editaveis/epigrafe}
 \input{editaveis/resumo}
 \input{editaveis/abstract}
-\input{fixos/listasAutomaticas}
-\input{editaveis/abreviaturas}
-\input{editaveis/simbolos}
+%\input{fixos/listasAutomaticas}
+%\input{editaveis/abreviaturas}
+%\input{editaveis/simbolos}
 \input{fixos/indiceAutomatico}
 
 \textual
@@ -34,13 +34,13 @@
 \input{editaveis/elementosdotexto}
 \input{editaveis/elementosdopostexto}
 
-\bookmarksetup{startatroot} 
+\bookmarksetup{startatroot}
 
 \postextual
 
-\bibliography{bibliografia} 
-\input{editaveis/apendices}
-\input{editaveis/anexos}
+\bibliography{bibliografia}
+%\input{editaveis/apendices}
+%\input{editaveis/anexos}
 \printindex
 
 \end{document}
