Desenvolvimento da introdução e adição de novas bibliografias

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,36 @@
+@article{becker2011,
+	Author={R. A. Becker and R. Caceres and K. Hanson and J. M. Loh and S. Urbanek and A. Varshavsky and C. Volinsky},
+	Journal={IEEE Pervasive Computing},
+	Title={A Tale of One City: Using Cellular Network Data for Urban Planning},
+	Year={2011},
+	Volume={10},
+	Number={4},
+	Pages={18-26},
+	Keywords={cellular radio;town and country planning;CDR data;New York City;call detail records;cellular network data;city dynamics;people flow analysis;suburban city;urban planning;Cellular networks;Cellular phones;Land mobile radio cellular systems;Poles and towers;Stratetic planning;Telecommunication network management;Telecommunication traffic;Urban areas;Large-scale opportunistic sensing;call detail records;cellular data;people flow;pervasive computing;urban planning},
+	Doi={10.1109/MPRV.2011.44},
+	ISSN={1536-1268},
+	Month={April},
+}
+
+@article{becker2013,
+	 Author = {Becker, Richard and C\'{a}ceres, Ram\'{o}n and Hanson, Karrie and Isaacman, Sibren and Loh, Ji Meng and Martonosi, Margaret and Rowland, James and Urbanek, Simon and Varshavsky, Alexander and Volinsky, Chris},
+	 Title = {Human Mobility Characterization from Cellular Network Data},
+	 Journal = {Commun. ACM},
+	 issue_date = {January 2013},
+	 Volume = {56},
+	 Number = {1},
+	 Month = jan,
+	 Year = {2013},
+	 ISSN = {0001-0782},
+	 Pages = {74--82},
+	 Numpages = {9},
+	 URL = {http://doi.acm.org/10.1145/2398356.2398375},
+	 DOI = {10.1145/2398356.2398375},
+	 ACMID = {2398375},
+	 Publisher = {ACM},
+	 Address = {New York, NY, USA},
+}
+
 @article{madhavji2015,
 	Author = {Nazim H. Madhavji and Andriy Miranskyy and Kostas Kontogiannis},
 	Title = {Big Picture of Big Data Software Engineering},
@@ -14,6 +47,17 @@
 	URL = {http://www.emc.com/collateral/analyst-reports/idc-extracting-value-from-chaos-ar.pdf},
 }
 
+@article{wu2014,
+	Author = {Xindong Wu and Xingquan Zhu, Gong-Qing Wu and Wei Ding},
+	Title = {Data Mining with Big Data},
+	Journal = {IEEE Transactions on Knowledge and Data Engineering},
+	Year = {2014},
+	Volume = {26},
+	Number = {1},
+	Month = {January},
+	Pages = {97-107},
+}
+
 @book{white2015,
 	Author = {Tom White},
 	Title = {Hadoop: The Definitive Guide},
@@ -21,6 +65,24 @@
 	Editor = {O'Reilly},
 	Year = {2015},
 	ISBN = {978-1-449-38973-4}
+}
+
+@manual{oracle2015,
+	Author = {Peter Heller and Dee Piziak},
+	Title = {An Enterprise Architect's Guide to Big Data},
+	Organization = {Oracle Corporation},
+	Address = {500 Oracle Parkway, Redwood Shores, CA 94065, USA},
+	Month = {May},
+	Year = {2015},
+	URL = {http://www.oracle.com/technetwork/topics/entarch/articles/oea-big-data-guide-1522052.pdf}
+}
+
+@techreport{pontes2011,
+	Author = {Taís Furtado Pontes},
+	Title = {Avaliação da mobilidade urbana na area metropolitana de Brasília},
+	Institution = {Universidade de Brasília},
+	Year = {2011},
+	Month = {Maio},
 }
 
 @manual{inmetro2003,
@@ -32,6 +94,45 @@
 	Pages = {75},
 	isbn = {85-87090-90-9},
 }
+
+@inproceedings{khan2009,
+	 Author = {Khan, Muhammad Usman and Khan, Shoab Ahmed},
+	 Title = {Social Networks Identification and Analysis Using Call Detail Records},
+	 Booktitle = {Proceedings of the 2Nd International Conference on Interaction Sciences: Information Technology, Culture and Human},
+	 Series = {ICIS '09},
+	 Year = {2009},
+	 ISBN = {978-1-60558-710-3},
+	 location = {Seoul, Korea},
+	 Pages = {192--196},
+	 Numpages = {5},
+	 URL = {http://doi.acm.org/10.1145/1655925.1655959},
+	 DOI = {10.1145/1655925.1655959},
+	 ACMID = {1655959},
+	 Publisher = {ACM},
+	 Address = {New York, NY, USA},
+}
+
+@inproceedings{tugores2013,
+	Author = {Maria Antonia Tugores and Pere Colet},
+	Title = {Big Data and Urban Mobility},
+	Booktitle = {Iberian Grid Infrastructure Conference Proceedings},
+	Pages = {75-87},
+	Editor = {Universidad Politécnica de Valencia},
+	Year = {2013},
+	URL = {http://hdl.handle.net/10261/116477},
+}
+
+@inproceedings{furletti2013,
+	Author = {B. Furletti and L. Gabrielli and C. Renso and S. Rinzivillo},
+	Booktitle = {Big Data, 2013 IEEE International Conference on},
+	Title = {Analysis of GSM calls data for understanding user mobility behavior},
+	Year = {2013},
+	Pages = {550-555},
+	Keywords = {cellular radio;data analysis;data mining;data privacy;pattern classification;telecommunication computing;GSM calls data;Global System for Mobile Communications;analysis phase;behavior categories;bootstrap phase;call profiles;commuters;data analysis;data provider;fingerprint analysis;mining algorithm;mobility behavior classification;mobility behavior identification;privacy constraints;privacy-preserving representation;residents;running phase;user call profiles;user mobility behavior;visitors;Analytical models;Cities and towns;Data privacy;GSM;Mobile handsets;Monitoring;Urban areas},
+	DOI = {10.1109/BigData.2013.6691621},
+	Month = {Oct},
+}
+
 
 @inproceedings{soviero1997,
 	Author = {P. A. O. Soviero and L. G. M. Lavagna},
@@ -85,6 +186,17 @@
 	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
 	Engineering},
 	Volume = {1},
+}
+
+@manual{3gppts2010,
+	Author = {TS ThreeGPP},
+	Title = {Charging Data Record (CDR) parameter description TS V8.8.0},
+	Address = {Route des Lucioles - Sophia Antipolis - Valbonne - France},
+	URL = {ftp://www.3gpp.org/tsg_sa/WG5_TM/TSGS5_70/_specs_for_checking/32298-880.doc},
+	Organization = {3GPP},
+	Year = {2010},
+	Month = {March},
+	Note = {Technical Specification},
 }
 
 @manual{NBR14724:2011,
