--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -77,6 +77,16 @@
 	URL = {http://www.oracle.com/technetwork/topics/entarch/articles/oea-big-data-guide-1522052.pdf}
 }
 
+@misc{visentsite,
+	Author = {VISENT},
+	Title = {Sobre nós: VISENT},
+	URL = {http://www.visent.com.br/sobre/},
+	Note = {Acessado no dia 29 de abril de 2016},
+	Year = {2016},
+	Month = {Abril},
+	Organization = {VISENT},
+}
+
 @techreport{pontes2011,
 	Author = {Taís Furtado Pontes},
 	Title = {Avaliação da mobilidade urbana na area metropolitana de Brasília},
