--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -1,75 +1,192 @@
 \chapter[Introdução]{Introdução}
 
-Vivemos na era da tecnologia, a principal engrenagem que move nossa atualidade é a
-informação. A informação é vital pois é dela que a sociedade deriva o conhecimento
-utilizado para crescer. Nos últimos anos a quantidade de dados tem crescido
-exponencialmente com o advento de novas tecnologias e a evolução das mídias sociais.
-Segundo a \textit{International Data Corporation}\footnote{Empresa privada que presta
-consultoria na área de negócios e TI.} (IDC) em 2010, a quantidade de informações
-passou de 1 \textit{zettabyte}\footnote{1 Zettabyte equivale à 1.8 trilhão de
-Gigabytes.}, e em 2011 alcançou a marca de 1.8 \textit{zettabyte}, informações que
-foram capturadas, armazenadas, criadas ao longo dos anos e no fim foram mensuradas
-para calcular o tamanho do espaço digital \cite{gantz2011}.
+    Vivemos na era da tecnologia, a principal engrenagem que move nossa atualidade é a
+    informação. A informação é vital pois é dela que a sociedade deriva o conhecimento
+    utilizado para crescer. Nos últimos anos a quantidade de dados tem crescido
+    exponencialmente com o advento de novas tecnologias e a evolução das mídias sociais.
+    Segundo a \textit{International Data Corporation}\footnote{Empresa privada que presta
+    consultoria na área de negócios e TI.} (IDC) em 2010, a quantidade de informações
+    passou de 1 \textit{zettabyte}\footnote{1 Zettabyte equivale à 1.8 trilhão de
+    Gigabytes.}, e em 2011 alcançou a marca de 1.8 \textit{zettabyte}, informações que
+    foram capturadas, armazenadas, criadas ao longo dos anos e no fim foram mensuradas
+    para calcular o tamanho do espaço digital \cite{gantz2011}.
 
-Segundo \citeonline{gantz2011} a tendência é que a quantidade de informações dobre a
-cada ano juntamente com o \textit{ratio} de crescimento da informação . De acordo
-com \citeonline{wu2014} 90\% das informações atualmente, foram produzidas nos
-últimos 2 anos, ultrapassando o crescimento da capacidade de armazenamento. Com
-essa grande quantidade de dados e informações, é possível realizar análises, criar
-estratégias de gerenciamento de informações, e integra-las a novos tipos de dados
-juntamente com dados tradicionais, esse processo é o que chamamos de \textit{Big
-Data} \cite{oracle2015}.
+    Segundo \citeonline{gantz2011} a tendência é que a quantidade de informações dobre a
+    cada ano juntamente com o \textit{ratio} de crescimento da informação . De acordo
+    com \citeonline{wu2014} 90\% das informações atualmente, foram produzidas nos
+    últimos 2 anos, ultrapassando o crescimento da capacidade de armazenamento. Com
+    essa grande quantidade de dados e informações, é possível realizar análises, criar
+    estratégias de gerenciamento de informações, e integra-las a novos tipos de dados
+    juntamente com dados tradicionais, esse processo é o que chamamos de \textit{Big
+    Data} \cite{oracle2015}.
 
-\section{Contextualização}
+    \section{Contextualização}
 
-Quando pensamos em deslocamento humano nas grandes cidades, logo pensamos no
-conceito de mobilidade urbana, que dê forma bem simples pode ser definido como o
-deslocamento de pessoas dentro do perímetro urbano. Para \citeonline{pontes2011}
-esse conceito vai além de um termo simplesmente quantitativo, e se aproxima mais para
-o qualitativo uma vez que a mobilidade se refere à capacidade que uma pessoa ou grupo
-de indivíduos possuem de se movimentar. A capacidade que está relacionada aos modos
-de transporte em função de uma atividade a ser realizada, é o que torna possível entendermos
-o propósito e definirmos diferentes perfis que atuam nas grandes metrópoles \cite{pontes2011}.
+        Quando pensamos em deslocamento humano nas grandes cidades, logo pensamos no
+        conceito de mobilidade urbana, que dê forma bem simples pode ser definido como o
+        deslocamento de pessoas dentro do perímetro urbano. Para \citeonline{pontes2011}
+        esse conceito vai além de um termo simplesmente quantitativo, e se aproxima mais para
+        o qualitativo uma vez que a mobilidade se refere à capacidade que uma pessoa ou grupo
+        de indivíduos possuem de se movimentar. A capacidade que está relacionada aos modos
+        de transporte em função de uma atividade a ser realizada, é o que torna possível entendermos
+        o propósito e definirmos diferentes perfis que atuam nas grandes metrópoles \cite{pontes2011}.
 
-Com o crescimento rápido das cidades, os planejadores urbanos precisam ter consciência
-dessa realidade, pois enfrentarão inúmeros desafios de trabalho, e o principal deles é o
-planejamento do fluxo urbano nas estradas. Para que eles possam realizar um planejamento
-efetivo é necessário que haja um estudo da mobilidade urbana na área a qual se deseja
-realizar mudanças. Hoje em dia existem inúmeras formas de realizar um mapeamento da
-mobilidade urbana, seja por GPS, aplicativos de smartphone como \textit{Foursquare}\footnote{
-Aplicativo em que o usuário posta o lugar o qual se encontra.}, \textit{Twitter}\footnote{
-Empresa responsável pelo aplicativo de post de mensagens ou twit.}, \textit{Waze}\footnote{
-Aplicativo que mostra o fluxo de transito e o melhor caminho para se chegar ao destino.}
-\cite{tugores2013}.
+        Com o crescimento rápido das cidades, os planejadores urbanos precisam ter consciência
+        dessa realidade, pois enfrentarão inúmeros desafios de trabalho, e o principal deles é o
+        planejamento do fluxo urbano nas estradas. Para que eles possam realizar um planejamento
+        efetivo é necessário que haja um estudo da mobilidade urbana na área a qual se deseja
+        realizar mudanças. Hoje em dia existem inúmeras formas de realizar um mapeamento da
+        mobilidade urbana, seja por GPS, aplicativos de smartphone como \textit{Foursquare}\footnote{
+        Aplicativo em que o usuário posta o lugar o qual se encontra.}, \textit{Twitter}\footnote{
+        Empresa responsável pelo aplicativo de post de mensagens ou twit.}, \textit{Waze}\footnote{
+        Aplicativo que mostra o fluxo de transito e o melhor caminho para se chegar ao destino.}
+        \cite{tugores2013}.
 
-Uma fonte de informações que possui o potencial para que possa ser feito esse estudo de dinâmica das
-cidades é os dados da rede de celulares \cite{becker2011}. \citeonline{khan2009} explicam que a
-indústria de telecomunicações cresceu tremendamente nos últimos anos, aumentando o
-número de pessoas que utilizam os serviços de telefonia em geral. No contexto das grandes
-metrópoles, é possível dizer que pelo menos todo cidadão dispõe de um celular. Logo as
-companhias de telefonia dispõem de dados para realizar uma analise de perfil do usuário
-bem como o estudo de mobilidade urbana para realização de um marketing direcionado
-\cite{khan2009}.
+        Uma fonte de informações que possui o potencial para que possa ser feito esse estudo de dinâmica das
+        cidades é os dados da rede de celulares \cite{becker2011}. \citeonline{khan2009} explicam que a
+        indústria de telecomunicações cresceu tremendamente nos últimos anos, aumentando o
+        número de pessoas que utilizam os serviços de telefonia em geral. No contexto das grandes
+        metrópoles, é possível dizer que pelo menos todo cidadão dispõe de um celular. Logo as
+        companhias de telefonia dispõem de dados para realizar uma analise de perfil do usuário
+        bem como o estudo de mobilidade urbana para realização de um marketing direcionado
+        \cite{khan2009}.
 
-Essas informações que são utilizadas para realizar o mapeamento, que as operadoras estão
-começando a usar, são chamadas de \textit{Call Detail Record}\footnote{\textit{Call Detail
-Record} é sinônimo de \textit{Charging Data Record}} (CDR) ou detalhamento do registro
-de ligação \cite{furletti2013}. De acordo com o manual técnico da \citeonline{3gppts2010} a definição de CDR
-é: \begin{quote}“Uma coleção de informações formatadas sobre os serviços (e.g. data da
-ligação realizada, duração da ligação, quantidade de dados transferidos, etc) para uso na
-realização de cobranças e dados de contabilidade. Para cada uma das partes a ser cobrada
-ou a cobrança de todas as partes referentes a um serviço, um CDR separado deve ser gerado, ou seja,
-mais de um CDR pode ser gerado para um único serviço, por exemplo, devido à sua longa
-duração, ou porque uma das partes ainda falta ser cobrada.”\end{quote} Já o conceito sucinto por
-\citeonline{becker2013} diz que cada CDR representar uma atividade de um usuário com
-referências no espaço (no caso o celular o qual a ligação foi realizada) e tempo (no caso
-quando o usuário realizou a ligação).
+        Essas informações que são utilizadas para realizar o mapeamento, que as operadoras estão
+        começando a usar, são chamadas de \textit{Call Detail Record}\footnote{\textit{Call Detail
+        Record} é sinônimo de \textit{Charging Data Record}} (CDR) ou detalhamento do registro
+        de ligação \cite{furletti2013}. De acordo com o manual técnico da \citeonline{3gppts2010}
+        a definição de CDR é: \begin{quote}“Uma coleção de informações formatadas sobre os
+        serviços (e.g. data da ligação realizada, duração da ligação, quantidade de dados transferidos,
+        etc) para uso na realização de cobranças e dados de contabilidade. Para cada uma das partes
+        a ser cobrada ou a cobrança de todas as partes referentes a um serviço, um CDR separado
+        deve ser gerado, ou seja, mais de um CDR pode ser gerado para um único serviço, por
+        exemplo, devido à sua longa duração, ou porque uma das partes ainda falta ser
+        cobrada.”\end{quote} Já o conceito sucinto por \citeonline{becker2013} diz que cada CDR
+        representar uma atividade de um usuário com referências no espaço (no caso o celular o
+        qual a ligação foi realizada) e tempo (no caso quando o usuário realizou a ligação).
 
-Com o CDR então é possível realizar o mapeamento do fluxo urbano em determinado espaço,
-pois esses dados contém informações referentes as antenas o qual o aparelho está conectado, logo
-a análise será pertinente á verificação da movimentação desses aparelhos ao longo das torres
-de sinais. O problema em utilizar esses dados, reside na problemática do gerenciamento de
-informações pois as mesmas precisam ser reorganizadas e analisadas para que possam produzir o conhecimento
-desejado. Devido a este fato, será utilizado o conceito de \textit{Big Data} para fazer o manejamento
-desses de dados com o objetivo de preparar essas informações para serem analisadas.
+        Com o CDR então é possível realizar o mapeamento do fluxo urbano em determinado espaço,
+        pois esses dados contém informações referentes as antenas o qual o aparelho está conectado,
+        logo a análise será pertinente á verificação da movimentação desses aparelhos ao longo das
+        torres de sinais. O problema em utilizar esses dados, reside na problemática do gerenciamento
+        de informações pois as mesmas precisam ser reorganizadas e analisadas para que possam
+        produzir o conhecimento desejado. Devido a este fato, será utilizado o conceito de
+        \textit{Big Data} para fazer o manejamento desses de dados com o objetivo de preparar
+        essas informações para serem analisadas.
 
+        Com a definição da atividade de mapeamento urbano, surgiu a necessidade de implantar
+        um projeto que tratasse da análise da mobilidade urbana em Brasília utilizando CDR. A
+        VISENT é uma empresa que presta serviços de consultoria e desenvolvimento de
+        soluções no suporte a processos operacionais e de negócio, com o tratamento de
+        registros (como os CDR’s), e responsável pelo projeto \cite{visentsite}. A VISENT
+        em parceria com o Instituto Federal de Brasília (IFB), elaborou um outro projeto que
+        consiste em realizar uma análise de \textit{benchmark}\footnote{Benchmark é um
+        processo de comparação de produtos, serviços e práticas empresariais, e é um
+        importante instrumento de gestão das empresas.} de seus clusters, em comparação com
+        os \textit{benchmarks} dos \textit{clusters} do IFB. O propósito é chegar a uma
+        configuração de \textit{cluster} otimizada e eficiente que realize a análise dos CDR’s
+        no menor tempo possível.
+
+    \section{Justificativa}
+
+        A decisão de abordar uma análise de desempenho focado em arquiteturas distribuídas
+        (\textit{cluster}) parte da necessidade que projeto possui. A necessidade referente parte
+        do seguinte contexto, os clusters que realizam análises sobre os CDR’s tomam um tempo
+        significativo para que sejam processadas. Existem inúmeras variáveis referentes ao
+        cluster que podem interferir em sua eficiência, como a arquitetura, os softwares
+        da análise dos dados, como o processamento de dados é realizado, o hardware utilizado,
+        as configurações realizadas, a topologia da rede
+        \cite{madhavji2015}.
+
+        Com base na justificativa descrita, o projeto irá visar a realização da montagem de um
+        cluster e sua configuração, com o objetivo de receber os CDR’s para que seja feito uma
+        replicação da análise feita pela empresa citada. Feito essas atividades, serão realizados
+        benchmarks no cluster da alvo para que esses dados venham a ser comparados aos
+        benchmarks dos clusters o qual foram realizados as análises. O objetivo é tentar alcançar
+        uma configuração de \textit{cluster} e \textit{Big Data}, que realize as mesmas análises,
+        em um menor tempo de duração, até chegar em uma configuração otimizada e eficiente.
+
+    \section{Questão de Pesquisa}
+
+        Esse TCC procura responder as seguintes questões de pesquisa:
+
+        \begin{itemize}
+            \item É possível replicar o mesmo processamento dos dados no mesmo tempo utilizado em uma arquitetura
+                      de hardware diferente?
+            \item Com uma arquitetura e configuração do ambiente, é possível reduzir o tempo de processamento
+                      dos CDR's em comparação com o tempo de processamento realizado pela empresa alvo?
+            \item É possível otimizar essa configuração e arquitetura?
+        \end{itemize}
+
+    \section{Objetivos}
+
+        Esta seção define os objetivos geral e específicos referentes ao trabalho.
+
+        \subsection{Objetivo Geral}
+
+            Esse TCC tem como objetivo geral, a elaboração de um \textit{cluster} com uma infraestrutura, arquitetura
+            e configurações, utilizando-se de ferramentas como \textit{Hadoop, Impala, Spark, HBase} e conceitos de
+            \textit{cluster} e \textit{Big Data} que realizem o processamento dos CDR's no menor tempo possível, em
+            comparação com os benchmarks de processamento alvo. O objetivo é surgir com uma infraestrutura,
+            arquitetura e configuração de modo que possa ser realizado um comparativo entre os benchmarks tanto
+            do \textit{cluster} elaborado quanto do \textit{cluster} alvo.
+
+        \subsection{Objetivos Específicos}
+
+            Os objetivos específicos abordados por esse TCC são:
+
+            \begin{itemize}
+                \item Realizar a revisão sistemática sobre o assunto de mobilidade urbana, CDR's, \textit{Big Data, Clusters, Hadoop,
+                          MapReduce, Impala, Spark} e de futuras ferramentar que poderão auxiliar na redução do tempo de
+                          processamento dos CDR's.
+                \item Realizar estudo sobre a infraestrura, arquitetura e configurações necessárias para a elaboração do cluster.
+                \item Montar o cluster, e realizar testes básicos para as funcionalidades que serão utilizadas.
+                \item Selecionar as métricas que serão utilizadas nos benchmarks comparativos.
+                \item Replicar o processamento dos CDR's.
+                \item Elaborar configurações, arquiteturas e infraestruturas customizáveis para o processamento de dados no \textit{cluster}.
+                \item Comparar os benchmarks obtidos com os benchmarks do processamento alvo e averiguar se o tempo
+                          de processamento de dados diminuiu.
+                \item Realizar considerações finais acerca do resultados obtidos com o comparativo dos benchmarks e propor melhorias.
+            \end{itemize}
+
+
+\section{Metodologia}
+
+    TODO - Escolher Metodologia de Pesquisa
+
+\section{Organização do Trabalho}
+
+    Esse TCC está organizado em oito capítulos, sendo este primeiro a Introdução. Os
+    demais capítulos são resumidos brevemente a seguir:
+
+    \begin{itemize}
+        \item \textbf{Revisão sistemática:} Neste capítulo existirão subtópicos explicando alguns conceitos de CDR de forma mais
+                                                                    aprofundada, e também os ferramentais como \textit{Hadoop, Yarn, MapReduce, Spark,
+                                                                    Impala, Hive} e dentre outras ferramentas caso haja necessidade de inclusão, para o
+                                                                    aperfeiçoamento do processamento de dados.
+        \item \textbf{Montagem do ambiente:} Realiza uma explicação sobre quais os procedimentos que foram realizados,
+                                                                         bem como informações sobre a arquitetura hardware e software utilizada, e
+                                                                         como foram realizadas as configurações rede entre nós do cluster alvo. O
+                                                                         objetivo é apresentar uma visão da arquitetura que será utilizada no cluster.
+        \item \textbf{Benchmarks:} Teremos a apresentação do ferramental responsável tanto pelo monitoramento quanto
+                                                       pela captura das métricas que serão utilizadas e armazenadas para questões comparativas.
+                                                       Explicação de como serão realizado os benchmarks e as possíveis ferramentas de análise
+                                                       dos dados fornecido pelos benchmarks.
+        \item \textbf{Replicação do processamento de dados:} Apresentação do estudo sobre implantação dos CDR's no cluster,
+                                                                                                   inicio do processo de inserção de CDR's, e realização da replicação
+                                                                                                   do processamendo dos CDR's no cluster alvo. Explicação do passo
+                                                                                                   a passo sobre como foram realizados esses procedimentos, bem
+                                                                                                   como se o processo está semelhante ao que é normalmente
+                                                                                                   realizado. Neste capítulo temos também a apresentação da captura
+                                                                                                   dos benchmarks para o comparativo que será realizado.
+        \item \textbf{Resultados Obtidos: } Aqui teremos o comparativo dos benchmarks, bem como as respostas para as
+                                                                  questões de pesquisa o qual foram estabelecidas. O objetivo é averiguar se os
+                                                                  dados coletados demonstram se as configurações realizadas foram os suficientes
+                                                                  para diminuir o tempo de processamento.
+        \item \textbf{Considerações Finais:} Por fim, teremos as considerações finais para averiguar que conclusões podem ser
+                                                                     retiradas deste TCC, bem como proposição de futuros trabalhos e melhorias para os
+                                                                     próximos trabalhos que seguirem na mesmo contexto deste tema.
+        \item \textbf{Referencial Teórico:} Material que foi utilizado para o embasamento teórico deste TCC, como artigos,
+                                                                  monografias, periódicos e dentre outros trabalhos que deram suporte as idéias
+                                                                  desenvolvidas nele.
+    \end{itemize}
