--- a/tcc.tex
+++ b/tcc.tex
@@ -28,6 +28,7 @@
 \textual
 
 \input{editaveis/introducao}
+\input{editaveis/revisaosistematica}
 \input{editaveis/aspectosgerais}
 \input{editaveis/consideracoes}
 \input{editaveis/textoepostexto}
